--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,16 @@
     "@apollo/react-hooks": "^3.1.3",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "next": "^9.2.1",
+    "next-cookies": "^2.0.3",
     "next-with-apollo": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
