--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "next-cookies": "^2.0.3",
     "next-with-apollo": "^5.0.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-feather": "^2.0.3"
   },
   "scripts": {
     "dev": "next",
