--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "next": "^9.2.1",
     "next-cookies": "^2.0.3",
     "next-with-apollo": "^5.0.0",
+    "nuka-carousel": "^4.6.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3"
