--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,6 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint-plugin-react": "7.24.0"
   }
 }
